syntax = "proto3";

option go_package = "/pkg/proto";
package proto;

service RaftService {
    rpc appendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {};
    rpc requestVote(RequestVoteRequest) returns (RequestVoteResponse) {};
}

message AppendEntriesRequest {
    int32 leaderTerm = 1;
    int32 leaderId = 2;
    int32 prevLogIndex = 3;
    int32 leaderCommitIndex = 4;
    repeated LogEntry entries = 5;
}

message LogEntry {
    int32 term = 1;
	int32 index = 2;
	string data = 3;
}

message AppendEntriesResponse {
    int32 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteResponse {
    int32 term = 1;
    bool voteGranted = 2;
}